<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="@drawable/background_degrade"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.telameusdados.TelaMeusDados">

    <TextView
        android:id="@+id/text_arrow_back"
        style="@style/Arrow_Back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_arrow_forward"
        style="@style/Arrow_Forward"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/text_meusDadoPessoais"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_meusDados"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_margin="15dp"
        android:padding="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <View
        android:id="@+id/containerHum"
        style="@style/ContainerTelas"
        android:layout_width="384dp"
        android:layout_height="528dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/container_hum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_meusDadoPessoais" />

    <EditText
        android:id="@+id/edit_nome"
        style="@style/Edit_Text"
        android:layout_width="266dp"
        android:layout_height="54dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/hint_nome"
        android:maxLines="1"
        android:textColorHint="@color/blue_dark2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/containerHum"
        app:layout_constraintTop_toTopOf="@id/containerHum" />

    <EditText
        android:id="@+id/edit_cpf"
        style="@style/Edit_Text"
        android:layout_width="253dp"
        android:layout_height="54dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/hint_cpf"
        android:maxLines="1"
        android:textColorHint="@color/blue_dark2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/containerHum"
        app:layout_constraintTop_toBottomOf="@id/edit_nome" />

    <EditText
        android:id="@+id/edit_telefone"
        style="@style/Edit_Text"
        android:layout_width="256dp"
        android:layout_height="54dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/hint_telefone"
        android:maxLines="1"
        android:textColorHint="@color/blue_dark2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/containerHum"
        app:layout_constraintTop_toBottomOf="@id/edit_cpf" />

    <EditText
        android:id="@+id/edit_dataNascimento"
        style="@style/Edit_Text"
        android:layout_width="176dp"
        android:layout_height="54dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/hint_dataNascimento"
        android:maxLines="1"
        android:textColorHint="@color/blue_dark2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/containerHum"
        app:layout_constraintTop_toBottomOf="@id/edit_telefone" />

    <EditText
        android:id="@+id/edit_sexo"
        style="@style/Edit_Text"
        android:layout_width="95dp"
        android:layout_height="54dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/hint_sexo"
        android:maxLines="1"
        android:textColorHint="@color/blue_dark2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/edit_dataNascimento"
        app:layout_constraintTop_toBottomOf="@+id/edit_telefone" />


    <TextView
        android:id="@+id/text_logradouro"
        android:layout_width="147dp"
        android:layout_height="44dp"
        android:layout_margin="15dp"
        android:layout_marginTop="16dp"
        android:padding="10dp"
        android:text="@string/text_logradouro"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/containerHum"
        app:layout_constraintTop_toBottomOf="@id/edit_sexo" />

    <EditText
        android:id="@+id/edit_cep"
        style="@style/Edit_Text"
        android:layout_width="141dp"
        android:layout_height="46dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/hint_cep"
        android:maxLines="1"
        android:textColorHint="@color/blue_dark2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/text_logradouro"
        app:layout_constraintTop_toBottomOf="@id/edit_sexo" />

    <EditText
        android:id="@+id/edit_endereco"
        style="@style/Edit_Text"
        android:layout_width="337dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/hint_endereco"
        android:maxLines="1"
        android:textColorHint="@color/blue_dark2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_cep" />


    <EditText
        android:id="@+id/edit_endComplemento"
        style="@style/Edit_Text"
        android:layout_width="343dp"
        android:layout_height="54dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/edit_text"
        android:gravity="center"
        android:hint="@string/hint_complemento"
        android:maxLines="1"
        android:textColorHint="@color/blue_dark2"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_endereco" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_entrar"
        style="@style/Edit_Text"
        android:background="@drawable/edit_textentrar"
        android:gravity="center"
        android:hint="@string/hint_entrar"
        android:maxLines="1"
        android:textColorHint="@color/black"
        android:layout_width="277dp"
        android:layout_height="54dp"
        android:layout_margin="35dp"
        android:layout_marginTop="84dp"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_endComplemento"
        tools:layout_editor_absoluteY="592dp" />




</androidx.constraintlayout.widget.ConstraintLayout>